# hardencheck

./: LICENSE  README.md  hardencheck.mermaid  hardencheck.py  install.sh  pyproject.toml  setup.py
hardencheck/: __init__.py  __main__.py  cli.py  models.py  scanner.py
hardencheck/analyzers/: __init__.py  aslr_entropy.py  aslr_summary.py  banned_functions.py  binary_analysis.py  certificate_scanner.py  config_scanner.py  credential_scanner.py  crypto_binary.py  cve_correlator.py  daemon_detection.py  file_discovery.py  firmware_profile.py  firmware_signing.py  kernel_hardening.py  pqc_readiness.py  reachability.py  sbom_generator.py  security_testing.py  service_privileges.py  taint_lite.py  update_mechanism.py  yara_scanner.py
hardencheck/constants/: __init__.py  binary.py  config.py  core.py  credentials.py  crypto.py  firmware.py  pqc.py  sbom.py  security.py  services.py
hardencheck/core/: __init__.py  base.py  context.py  utils.py
hardencheck/reports/: __init__.py  csv_report.py  cyclonedx_sbom.py  grading.py  html_report.py  json_report.py  sarif_report.py  spdx_sbom.py  text_report.py  vex.py
