[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hardencheck"
dynamic = ["version"]
description = "Firmware Binary Security Analyzer — hardening, SBOM, CVE correlation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0" }
authors = [{ name = "v33ru / IOTSRG" }]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
hardencheck = "hardencheck.cli:main"

[tool.setuptools.dynamic]
version = { attr = "hardencheck.constants.core.VERSION" }

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "*.tests", "*.tests.*"]
